# webassembly-component-model-experiments

./: .editorconfig  .env.original  .gitignore  Cargo.toml  LICENSE  README.md  biome.json  justfile  lint-staged.config.mjs  package-lock.json  package.json
.cursor/rules/: general.mdc  git-commands.md
.github/workflows/: cross-compile.yml  rust-host.yml  update-homebrew-tap.yml  web-host.yml
c_modules/: README.md
c_modules/plugin-echo/: .gitignore  component.c
crates/api/: Cargo.toml  build.rs
crates/api/src/: bindings.rs  lib.rs
crates/api/src/host_api/: mod.rs
crates/api/src/plugin_api/: mod.rs
crates/api/wit/: host-api.wit  plugin-api.wit  shared.wit  world.wit
crates/cli-host/: Cargo.toml  README.md  build.rs
crates/cli-host/src/: engine.rs  host.rs  lib.rs  main.rs  status_handler.rs  store.rs  wasm_host.rs
crates/cli-host/tests/: debug_test.rs  e2e_test.rs
crates/plugin-cat/: Cargo.toml  README.md
crates/plugin-cat/src/: lib.rs
crates/plugin-echo/: Cargo.toml  README.md
crates/plugin-echo/src/: lib.rs
crates/plugin-greet/: Cargo.toml  README.md
crates/plugin-greet/src/: bindings.rs  lib.rs
crates/plugin-ls/: Cargo.toml  README.md
crates/plugin-ls/src/: bindings.rs  lib.rs
crates/plugin-tee/: Cargo.toml  README.md
crates/plugin-tee/src/: lib.rs
crates/plugin-weather/: Cargo.toml  README.md
crates/plugin-weather/src/: api.rs  bindings.rs  lib.rs
crates/pluginlab/: Cargo.toml  README.md  build.rs
crates/pluginlab/src/: api.rs  cli.rs  engine.rs  helpers.rs  lib.rs  main.rs  permissions.rs  store.rs  wasm_host.rs
crates/pluginlab/tests/: e2e_c_plugins.rs  e2e_cli_host.rs  e2e_go_plugins.rs  e2e_rust_plugins.rs  e2e_rust_repl_logic.rs  e2e_test.rs  utils.rs
crates/pluginlab/wit/: README.md  host-api.wit  plugin-api.wit
crates/repl-logic-guest/: Cargo.toml  README.md  build.rs
crates/repl-logic-guest/src/: bindings.rs  env.rs  lib.rs  parser.rs  reserved.rs  vars.rs
fixtures/: README.md  valid-plugin-with-invalid-wit.wasm
fixtures/filesystem/: .config  .hidden_file  README.browser.md  README.rust.md
fixtures/filesystem/data/: sample.csv  users.yaml
fixtures/filesystem/data/processed/2024/: .gitkeep
fixtures/filesystem/data/processed/2024/01/: .gitkeep
fixtures/filesystem/data/processed/2024/02/: .gitkeep
fixtures/filesystem/data/raw/incoming/: .gitkeep
fixtures/filesystem/data/raw/outgoing/: .gitkeep
fixtures/filesystem/documents/: README.md  config.json  notes.txt
fixtures/filesystem/documents/work/projects/: .gitkeep
fixtures/filesystem/documents/work/projects/alpha/: .gitkeep
fixtures/filesystem/documents/work/projects/beta/: .gitkeep
fixtures/filesystem/logs/errors/: .gitkeep
fixtures/filesystem/logs/errors/critical/: .gitkeep
fixtures/filesystem/logs/errors/warning/: .gitkeep
go_modules/plugin-echo/: .gitignore  go.mod  main.go
go_modules/wit/: host-api.wit  plugin-api.wit  shared.wit
scripts/: prepare-wasm-files.sh  prepare-wit-files.sh
wit/: host-api.wit  host.wit  plugin-api.wit  plugin.wit  repl.wit  shared.wit
