[workspace]
resolver = "2"
members = [
    "crates/pluginlab",
    "crates/plugin-greet",
    "crates/plugin-echo",
    "crates/plugin-ls",
    "crates/plugin-weather",
    "crates/repl-logic-guest",
]

[workspace.package]
publish = false
edition = "2024"
description = "Terminal REPL with sandboxed multi-language plugin system - unified codebase runs in CLI (Rust) and web (TypeScript)"
keywords = [
    "WebAssembly",
    "Component Model",
    "wasmtime",
    "wit-bindgen",
    "plugin-system",
]
homepage = "https://github.com/topheman/webassembly-component-model-experiments#readme"
repository = "https://github.com/topheman/webassembly-component-model-experiments.git"
license = "MIT"
authors = ["Christophe Rosset <tophe@topheman.com>"]

[workspace.dependencies]
wasmtime = { version = "33", default-features = false, features = [
    "async",
    "demangle",
    "runtime",
    "cranelift",
    "component-model",
    "incremental-cache",
    "parallel-compilation",
] }
wasmtime-wasi = "33"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
wit-bindgen-rt = { version = "0.42.1", features = ["bitflags"] }
