[workspace]
resolver = "2"
members = [
    "crates/pluginlab",
    "crates/plugin-greet",
    "crates/plugin-echo",
    "crates/plugin-ls",
    "crates/plugin-cat",
    "crates/plugin-weather",
    "crates/plugin-tee",
    "crates/repl-logic-guest",
]

[workspace.package]
publish = false
edition = "2024"
description = "Terminal REPL with sandboxed multi-language plugin system - unified codebase runs in CLI (Rust) and web (TypeScript)"
keywords = [
    "WebAssembly",
    "component-model",
    "wasmtime",
    "wit-bindgen",
    "plugin-system",
]
categories = ["command-line-interface", "wasm"]
homepage = "https://github.com/topheman/webassembly-component-model-experiments#readme"
repository = "https://github.com/topheman/webassembly-component-model-experiments.git"
license = "MIT"
authors = ["Christophe Rosset <tophe@topheman.com>"]

[workspace.dependencies]
wasmtime = { version = "35", default-features = false, features = [
    "async",
    "demangle",
    "runtime",
    "cranelift",
    "component-model",
    "incremental-cache",
    "parallel-compilation",
] }
wasmtime-wasi = "35"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
anyhow = "1.0"
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
