[package]
name = "cli-host"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
wasmtime = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
api = { path = "../api" }
