[package]
name = "cli-host"
version = "0.1.0"
edition = "2021"
publish = false
description = "Command-line interface host for WebAssembly Component Model REPL with plugin system"

[dependencies]
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
api = { path = "../api" }

[dev-dependencies]
rexpect = "0.5"
