[package]
name = "plugin-ls"
version = "0.1.0"
edition = { workspace = true }
publish = false
description = "Example ls plugin for REPL based on WebAssembly Component Model - demonstrates file system access"

[dependencies]
wit-bindgen-rt = { workspace = true, features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "repl:api"
target = { path = "../pluginlab/wit", world = "plugin-api" }

[package.metadata.component.dependencies]
