[package]
name = "plugin-weather"
version = "0.1.0"
edition = { workspace = true }
publish = false
description = "Example weather plugin for WebAssembly Component Model REPL - demonstrates using network by calling to an external API"

[dependencies]
wit-bindgen-rt = { workspace = true, features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "repl:api"
target = { path = "../../wit", world = "plugin-api" }

[package.metadata.component.dependencies]
