[package]
name = "plugin-weather"
version = "0.1.0"
edition = { workspace = true }
publish = false
description = "Example weather plugin for REPL based on WebAssembly Component Model - demonstrates using network by calling to an external API"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
wit-bindgen-rt = { workspace = true, features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "repl:api"
target = { path = "../pluginlab/wit", world = "plugin-api" }

[package.metadata.component.dependencies]
