[package]
name = "pluginlab"
version = "0.5.2"
edition = "2021"
publish = true
description = "Command-line interface host for Terminal REPL with plugin system (using WebAssembly Component Model)"
keywords = [
  "WebAssembly",
  "component-model",
  "wasmtime",
  "wit-bindgen",
  "plugin-system",
]
categories = ["command-line-interface", "wasm"]
homepage = "https://github.com/topheman/webassembly-component-model-experiments#readme"
repository = "https://github.com/topheman/webassembly-component-model-experiments.git"
license = "MIT"
authors = ["Christophe Rosset <tophe@topheman.com>"]

[dependencies]
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
reqwest = "0.12.20"
clap_complete = "4.5"

[build-dependencies]
wasmtime = { workspace = true }

[dev-dependencies]
rexpect = "0.5"
