[package]
name = "repl-logic-guest"
version = "0.1.0"
edition = { workspace = true }
publish = false

[dependencies]
api = { path = "../api" }
wit-bindgen-rt = { workspace = true }

[build-dependencies]
cargo-component = "0.5.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "repl:api"
target = { path = "../api/wit", world = "host-api" }

[package.metadata.component.dependencies]
