[package]
name = "repl-logic-guest"
version = "0.1.0"
edition = { workspace = true }
publish = false

[dependencies]
wit-bindgen-rt = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "repl:api"
target = { path = "../../wit", world = "host-api" }

[package.metadata.component.dependencies]
